# Zimular

./: .gitignore  Genarator.py  README.md  best_model.h5  componets.py  input.py  machine_components_data.csv  main.py  mainTest.py  manage.py  package-lock.json  run.py  settings.py  test.py
EXPERIMENT/: TEST.py
Engine/: engine.py  engineTest.py  generator.py  tst.py
Framework/: componets.py  input.py  mainTest.py  manage.py  requirment.txt  run.py
Framework/Nawodya/: .gitignore  main.py  run.py  test.txt
Framework/ZIM/: ZComponets.py  ZDB.py  ZGen.py  ZResource.py  ZStores.py  ZimFilterStore.py  ZimPriorityStore.py  file_manager.py  output_table.py
Framework/modelDB/: pyvenv.cfg
Framework/zimdb/: Cargo.toml  ts.py  tss.py
Framework/zimdb/src/: db.rs  qeng.rs
Framework2/: componets.py  mainTest.py  manage.py
Framework2/ZIM/: output_table.py
Framework2/zimdb/: pyproject.toml  ts.py
GUI/: .env  Dockerfile  package-lock.json  package.json
GUI/src/: middleware.ts
Services/: defaults.py  services.py
Tests/: TEST.py
ZIM/: ZComponets.py  ZContainer.py  ZDB.py  ZEvent  ZEvent.py  ZGen.py  ZResource.py  ZStore.py  componets.py  config.py  file_manager.py  output_table.py
ZIM/API/: endpoints.py  engineClone.py
docs/: Intro_example.md  documentation.md
rustDBenv/: pyvenv.cfg
socketServer/: README.md  SocketServer.ts  bun.lockb  db.ts  package-lock.json  package.json  tools.ts
unit_test/: run.py  tst2.py
utility/: entityImporter.py  loadConfigs.py
webui/: docker-compose.yml  package-lock.json  package.json
zimdb/: Cargo.toml  ts.py  tss.py
(+235 files in other folders)
