[package]
name = "zimdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zimdb"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.20.3"
prettytable-rs = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-sync"]
